--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -3,6 +3,7 @@ output:
   pdf_document:
     latex_engine: xelatex
     keep_tex: yes
+  word_document: default
 bibliography: JAE_Review.bib
 csl: "environmental-reviews.csl"
 documentclass: article
@@ -275,7 +276,7 @@ Omnivory             Proportion of species that  It provides trophic flexibility
 
 The most common stressor reported along the southwest Atlantic - Antarctic gradient is global warming, except for Beagle Channel and Burdwood Bank, which are more influenced by the introduction of an alien species and fisheries, respectively (section 3, Table 3). The main characteristics of global warming in the region, and the most plausible drivers of change, are: sea warming, glacial retreat, elevated sediment input in the water column, and reduction of the sea ice extent. These drivers act in different ways and magnitudes in the studied locations along the latitudinal gradient. 
 Despite emphasizing global warming in this section, this does not mean that no other stressors act or interact with global warming in the study systems, potentially buffering the overall effect on the food web (e.g. sea warming and fishery in San Jorge Gulf).
-Climate change has led to several well-documented impacts on marine species regarding distributional shifts induced by warming of marine currents [@Poloczanska2013; @Wu2012; @Verges2019]. Furthermore, warmer temperatures increase species metabolic rates [@Brown2004]. Changes in metabolic rates can subsequently translate into shifts in species traits (body size, @Vucic-Pestic2011; @Klein2018], biomass [@Perry2020] and distribution [@Kortsch2015]. Alterations in the species body size and distributions have ripple effects on feeding interactions, for example, it can introduce new feeding interactions [@Pecuchet2020; @Verges2014], modify existing ones, and shorten energy pathways [@Bartley2019; @OGorman2019], and reduce trophic efficiencies [@Vucic-Pestic2011].
+Climate change has led to several well-documented impacts on marine species regarding distributional shifts induced by warming of marine currents [@Poloczanska2013; @Wu2012; @Verges2019]. Furthermore, warmer temperatures increase species metabolic rates [@Brown2004]. Changes in metabolic rates can subsequently translate into shifts in species traits (e.g. body size, @Vucic-Pestic2011; @Klein2018), biomass [@Perry2020], and distribution [@Kortsch2015]. Alterations in the species body size and distributions have ripple effects on feeding interactions, for example, it can introduce new feeding interactions [@Pecuchet2020; @Verges2014], modify existing ones, and shorten energy pathways [@Bartley2019; @OGorman2019], and reduce trophic efficiencies [@Vucic-Pestic2011].
 
 In recent years, several new fish  [@Galvan2022] and macroinvertebrates species [@Vinuesa2005; @Lopez-Gappa2022] were registered in Patagonia, mostly in San Jorge Gulf in relation to the southward range shift of warm-temperate species. This distributional change is driven by the tropicalization of temperate waters caused by sea warming [@Verges2014; @Verges2019]. Because of its location in the ecotone between two biogeographic provinces, the Argentine (30°S - 44°S) and the Magellanic (43°S - 55°S) [@Balech2008], the San Jorge Gulf is prone to changes in species composition. We hypothesize that sea warming will alter the food web structure topologically, by increasing the number of species and interactions. Newcomers are, in general, mid-trophic level species with generalist diets, hence an increase in food web connectance may be expected [@Bartley2019]. In another temperate ecosystem, an increase in the number of fish species, led to an increase in functional diversity and predation rate [@Sgarlatta2023]; consequences that may also be expected in San Jorge Gulf. Given the short path length of the San Jorge Gulf food web, the disturbances from the listed stressors are expected to spread to many species of the food web (Table 3). However, it has to be acknowledged that the increase in functional diversity driven by the range expansion of warm-temperate species is contrary to the process of homogenization and loss of functional diversity in the area driven by trawl fisheries [@Rincon-Diaz2021].
 
