--- a/manuscript.tex
+++ b/manuscript.tex
@@ -973,8 +973,8 @@ on marine species regarding distributional shifts induced by warming of
 marine currents (Wu et al. 2012; Poloczanska et al. 2013; Vergés et al.
 2019). Furthermore, warmer temperatures increase species metabolic rates
 (Brown et al. 2004). Changes in metabolic rates can subsequently
-translate into shifts in species traits (body size, Vucic-Pestic et al.
-(2011); Klein et al. (2018){]}, biomass (Perry et al. 2020) and
+translate into shifts in species traits (e.g.~body size, Vucic-Pestic et
+al. (2011); Klein et al. (2018)), biomass (Perry et al. 2020), and
 distribution (Kortsch et al. 2015). Alterations in the species body size
 and distributions have ripple effects on feeding interactions, for
 example, it can introduce new feeding interactions (Vergés et al. 2014;
